<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_bar_cat_add"
        android:title="@string/context_bar_cat_add"
        android:titleCondensed="@string/context_bar_cat_add_short"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/context_bar_cat_edit"
        android:title="@string/context_bar_cat_edit"
        android:titleCondensed="@string/context_bar_cat_edit_short"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/context_bar_cat_delete"
        android:title="@string/context_bar_cat_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText" />
</menu>