<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.timothyshaffer.memora.activity.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <include
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashcard_heading"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/horizontal_rule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_desc"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radioSpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="@string/spa_radio"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="@string/eng_radio"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioBoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="@string/both_radio"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
<!--
            <RadioButton
                android:id="@+id/radioRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="@string/random_radio"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
-->
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_heading"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/horizontal_rule" />
<!--
        <Button
            android:id="@+id/button_clear_database"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="resetTestData"
            android:text="@string/reset_test_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_test_data_desc"
            android:textSize="18sp" />
-->
        <Button
            android:id="@+id/button_export_database"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="backupDatabase"
            android:text="@string/backup_database_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_database_desc"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_import_database"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="importDatabase"
            android:text="@string/import_database_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_database_desc"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/horizontal_rule" />


        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_version"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>